[package]
name = "parserprinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
flate2 = "1.0"
md5 = "0.7.0"
rayon = "1.7.0"
rocksdb = "0.21.0"
rusqlite = "0.29.0"
tempfile = "3.6.0"
zstd = "0.12.3"
