[package]
name = "parserprinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
rayon = "1.7.0"
rocksdb = "0.21.0"
rusqlite = "0.29.0"
serde = {version = "1.0.183", features = ["derive"]}
bincode = "1.3.3"
tempfile = "3.6.0"
zstd = "0.12.3"

[dependencies.flate2]
version = "1.0.17"
features = ["zlib-ng-compat"]
default-features = false 

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
]
